--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-project",
+  "name": "jourmooney.github.io",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jourmooney.github.io",
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
